  * Depend on new enough rootskel.
  * Fix some messages that referred to the debootstrap error log for
    non-debootstrap errors.
  * Move link_in_boot here from rootskel, and rename it to
    base-installer/kernel/linux/link_in_boot. Stuff that assumes it is on
    the initrd will need to be updated.
  * Turn off link_in_boot for amd64 to be same as i386.

 -- Joey Hess <joeyh@debian.org>  Tue,  9 Aug 2005 15:18:25 -0400

base-installer (1.22) unstable; urgency=low

  * debootstrap can now install to unclean targets, mostly, so reword the
    warnings about it and allow the user to choose to do that even at high
    priority.

 -- Christian Perrier <bubulle@debian.org>  Sun, 17 Jul 2005 09:42:21 +0200

base-installer (1.21) unstable; urgency=low

  [ Colin Watson ]
  * Give debian/templates the same mtime as debian/templates-arch, so that
    po2debconf doesn't decide that it needs to run debconf-updatepo on
    every binary package build.
  * If gpgv and a keyring are installed, enable debootstrap's Release
    signature checking.

  [ Joey Hess ]
  * Switch i386 to 2.6.11. (Fallback only though.)
  
  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - Czech (cs.po) by Miroslav Kure
    - Danish (da.po) by Claus Hindsgaul
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Gallegan (gl.po) by Jacobo Tarrio
    - Hebrew (he.po) by Lior Kaplan
    - Indonesian (id.po) by Arief S Fitrianto
    - Italian (it.po) by Giuseppe Sacco
    - Japanese (ja.po) by Kenshi Muto
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Slovak (sk.po) by Peter Mann
    - Tagalog (tl.po) by Eric Pareja
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov
    - Wolof (wo.po) by Mouhamadou Mamoune Mbacke
    - Simplified Chinese (zh_CN.po) by Carlos Z.F. Liu

 -- Joey Hess <joeyh@debian.org>  Tue,  5 Jul 2005 21:36:26 +0300

base-installer (1.20) unstable; urgency=low

  * dann frazier
    - Update arch_get_kernel_flavour() for ia64 so that it keys off of