@@ -12,6 +12,7 @@ base-installer (1.23) UNRELEASED; urgency=low
     base-installer/kernel/linux/link_in_boot. Stuff that assumes it is on
     the initrd will need to be updated.
   * Turn off link_in_boot for amd64 to be same as i386.
+  * Parameterise NUMCPUS so the test suite can work.
 
  -- Joey Hess <joeyh@debian.org>  Tue,  9 Aug 2005 15:18:25 -0400
 
